--- a/index.html
+++ b/index.html
@@ -7,39 +7,146 @@
     <title lang="uk">Студія</title>
   </head>
   <body>
-    <!-- Header -->
     <header>
+      <h2>WebStudio</h2>
       <nav>
-        <a href="#">WebStudio</a>
+        <!-- <a href="#">WebStudio</a> -->
         <ul>
-          <li>
-            <a href="#">Студия</a>
-          </li>
-          <li>
-            <a href="#">Портфолио</a>
-          </li>
-          <li>
-            <a href="#">Контакты</a>
-          </li>
+          <li><a href="#Studia">Студия</a></li>
+          <li><a href="#Portfolio">Портфолио</a></li>
+          <li><a href="#Contacts">Контакты</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
-    <!--Main-->
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/box1.jpg"
+              width="370"
+              height="294"
+              alt="Создание макета"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box2.jpg"
+              width="370"
+              height="294"
+              alt="Разработка"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box3.jpg"
+              width="370"
+              height="294"
+              alt="Дизайн"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              width="270"
+              height="260"
+              alt="Игорь Демьяненко"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              width="270"
+              height="260"
+              alt="Ольга Репина"
+            />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              width="270"
+              height="260"
+              alt="Николай Тарасов"
+            />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img4.jpg"
+              width="270"
+              height="260"
+              alt="Михаил Ермаков"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
-
     <footer>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <!-- <a href="#">WebStudio</a> -->
+      <h2>WebStudio</h2>
+      <address>г. Киев,пр-т Леси Украинки, 26</address>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
