--- a/index.html
+++ b/index.html
@@ -138,15 +138,17 @@
     <footer>
       <!-- <a href="#">WebStudio</a> -->
       <h2>WebStudio</h2>
-      <address>г. Киев,пр-т Леси Украинки, 26</address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        г. Киев,пр-т Леси Украинки, 26
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
