Заменила лого на ссылки

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <header>
-      <h2>WebStudio</h2>
       <nav>
-        <!-- <a href="#">WebStudio</a> -->
+        <a href="#">WebStudio</a>
         <ul>
           <li><a href="#Studia">Студия</a></li>
           <li><a href="#Portfolio">Портфолио</a></li>
@@ -32,31 +31,23 @@
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -64,28 +55,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img
-              src="./images/box1.jpg"
-              width="370"
-              height="294"
-              alt="Создание макета"
-            />
+            <img src="./images/box1.jpg" width="370" height="294" alt="Создание макета" />
           </li>
           <li>
-            <img
-              src="./images/box2.jpg"
-              width="370"
-              height="294"
-              alt="Разработка"
-            />
+            <img src="./images/box2.jpg" width="370" height="294" alt="Разработка" />
           </li>
           <li>
-            <img
-              src="./images/box3.jpg"
-              width="370"
-              height="294"
-              alt="Дизайн"
-            />
+            <img src="./images/box3.jpg" width="370" height="294" alt="Дизайн" />
           </li>
         </ul>
       </section>
@@ -93,42 +69,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./images/img1.jpg"
-              width="270"
-              height="260"
-              alt="Игорь Демьяненко"
-            />
+            <img src="./images/img1.jpg" width="270" height="260" alt="Игорь Демьяненко" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/img2.jpg"
-              width="270"
-              height="260"
-              alt="Ольга Репина"
-            />
+            <img src="./images/img2.jpg" width="270" height="260" alt="Ольга Репина" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/img3.jpg"
-              width="270"
-              height="260"
-              alt="Николай Тарасов"
-            />
+            <img src="./images/img3.jpg" width="270" height="260" alt="Николай Тарасов" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img4.jpg"
-              width="270"
-              height="260"
-              alt="Михаил Ермаков"
-            />
+            <img src="./images/img4.jpg" width="270" height="260" alt="Михаил Ермаков" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -136,10 +92,9 @@
       </section>
     </main>
     <footer>
-      <!-- <a href="#">WebStudio</a> -->
-      <h2>WebStudio</h2>
+      <a href="#">WebStudio</a>
       <address>
-        г. Киев,пр-т Леси Украинки, 26
+        <p>г. Киев,пр-т Леси Украинки, 26</p>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
